--- a/public/index.html
+++ b/public/index.html
@@ -1,47 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8" />
-  <title>Sesmo-Bot Connect</title>
+  <title>WhatsApp Bot Pairing Code</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body {
-      font-family: sans-serif;
-      background-color: #0f172a;
-      color: white;
-      text-align: center;
-      padding: 20px;
-    }
-    .box {
-      background: #1e293b;
-      padding: 30px;
-      border-radius: 15px;
-      display: inline-block;
-    }
-    img {
-      width: 250px;
-      border-radius: 10px;
-    }
-    .refresh {
-      font-size: 0.9em;
-      color: #94a3b8;
-    }
+    body { font-family: sans-serif; text-align: center; padding-top: 50px; }
+    #code { font-size: 28px; font-weight: bold; color: green; }
   </style>
 </head>
 <body>
-  <div class="box">
-    <h1>Sesmo-Bot Pairing</h1>
-    <div id="content">Loading...</div>
-    <p class="refresh">Refreshing every 5s...</p>
-  </div>
+  <h1>Scan or Enter the Code to Link WhatsApp</h1>
+  <div id="code">Loading...</div>
 
   <script>
-    async function load() {
-      const res = await fetch('/status');
-      const html = await res.text();
-      document.getElementById('content').innerHTML = html;
+    async function fetchCode() {
+      const res = await fetch('/code');
+      const text = await res.text();
+      document.getElementById('code').textContent = text || 'Waiting for code...';
     }
-    load();
-    setInterval(load, 5000);
+
+    setInterval(fetchCode, 2000);
+    fetchCode();
   </script>
 </body>
 </html>
